src/pages/MeStyle.css
@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');

:root {
  --greenPrimary: #216E4E;
  --greenSecondary: #1F845A;
  --lightPrimary: #DCFFF1;
  --lightSecondary: #7EE2B8;
  --darkSecondary: #282828;
  --gray-100: #ececec;
  --gray-200: #e3e3e3;
  --gray-400: #b4b4b4;
  --gray-500: #9b9b9b;
  --gray-600: #676767;
  --gray-700: #424242;
  --gray-750: #2f2f2f;
  --gray-800: #212121;
  --gray-900: #171717;
  --red-500: #ef4444;
  --purple-800: #352C63;
  --purple-600: #5E4DB2;
}

/*
Portfolio Page
*/
html {
  background-color: var(--greenPrimary);
}

.portfolio-page *,
.resume-page * {
  font-family: "Josefin Sans", serif;
  font-style: normal;
}

.portfolio-page {
  position: relative;
  display: flex;
  background-color: var(--lightPrimary);
  height: 100vh;
  min-height: 500px;

  h1,
  h2,
  h3,
  h4,
  h5 {
    font-family: "Source Code Pro", monospace;
  }

  h1 {
    margin-top: 2vh;
    font-weight: 900;
    font-size: 43px;
  }

  h2 {
    margin-top: 7vh;
    font-weight: 400;
    font-size: 35px;
    color: var(--greenPrimary);
  }

  h4 {
    font-weight: 600;
    font-size: 30px
  }

  h5 {
    font-weight: 600;
    font-size: 23px;
  }

  .mini {
    padding-top: 0;
    font-size: 14.5px;
    color: var(--gray-500);
  }

  p {
    font-weight: 600;
    font-size: 17px;
    line-height: 1.3;
  }

  li p,
  li {
    font-size: 16px;
  }

  .slider-col.big-screen {
    max-width: 0%;

    #slide-btn {
      visibility: hidden;
    }
  }

  scrollbar-color: var(--purple-800) rgba(0, 0, 0, 0);
  /* Thumb color and track color */
}


.portfolio-page.dark-mode {
  background-color: var(--gray-900);
  color: var(--gray-200);
}

.diagonal-grid.dark-mode {
  background-color: var(--gray-900);
}

.main-column-A {
  display: flex;
  flex-direction: column;
  width: 420px;
  justify-content: space-between;
  overflow: hidden;
  white-space: nowrap;
}

.main-column-B {
  padding: 2vh 3vh 2vh 2vh;
  display: flex;
  flex-direction: column;
  width: 100%;
  overflow-y: auto;
  overflow-x: hidden;
  border-inline: 2px solid var(--greenPrimary);

  .skills p {
    margin: 0;
  }

  .error {
    display: flex;
    margin: 0;
    padding: 2vh;
  }
}

@media (max-width: 1100px) {
  .main-column-A.hidden-b {
    min-width: 420px;
    max-width: 420px !important;
    border-right: 2px solid var(--greenPrimary);
    transition: all 1s ease;
  }

  .main-column-A.hidden-a {
    max-width: 0px;
    min-width: 0px;
    transition: all 1s ease;
  }

  .main-column-B.hidden-a {
    max-width: 100%;
    min-width: max(calc(100% - 230px), 480px);
    transition: all 1s ease;
  }

  .main-column-B.hidden-b {
    padding: 0;
    min-width: 0px;
    max-width: 0px;
    border-left: none;
    border-right: 2px solid var(--greenPrimary);
    transition: all 1s ease;

    section p, section div{
      flex: 0;
      min-width: 250px;
      overflow-x: hidden;
    }
  }

  #slide-btn {
    position: relative;
    align-self: flex-end;
    top: calc(50% - 15px);
    width: 30px;
    height: 30px;
    border-radius: 50%;
    border: none;
    outline: none;
    visibility: visible;
  }
}

@media (min-width: 1076px) {
  .main-column-A {
    min-width: 420px;
    max-width: 420px;
    transition: all 1s ease;
  }

  .main-column-B {
    max-width: 100%;
    transition: all 1s ease;
  }
}

#intro {
  padding: 2vh 3vh 0 3vh;
}

#dark-mode-btn,
#back-btn,
#slide-btn {
  color: var(--greenPrimary);
}

#dark-mode-btn:hover,
#slide-btn:hover {
  background-color: var(--greenPrimary);
  color: #DBD7D2;
}

/* SideBar Comp */
.side-bar-column {
  display: flex;
}

/* ScrollTo Comp */
.scroll-list {
  margin: 0;
  display: flex;
  flex-direction: column;
}

/* Card Comp */
.portfolio-page {
  .card-section {
    margin: 3vh 1vw 3vh 1vw;
    background-color: var(--purple-800);
    width: 80%;
    line-height: 1.2;

    .card-title {
      display: flex;
      justify-content: space-between;
    }

    .card-content {
      font-size: 16px;
    }
  }

  .card-section:hover {
    background-color: var(--purple-600);
  }
}

.thin-title {
  font-size: 16px;
  font-weight: 300 !important;
  color: var(--gray-200);
}

.title-row {
  display: flex;
  justify-content: space-between;

  #language-title {
    color: inherit;
    max-width: 40%;
  }

  #skills-title {
    color: inherit;
    padding-left: 1vh;
    min-width: 60%;
  }
}

.thin-content p {
  font-size: 13px;
  font-weight: 300 !important;
}

.thin-content.dark-mode p {
  color: var(--gray-400) !important;
}

.project-group {
  margin-block: 2vh;

  .project-link {
    display: flex;
    margin-bottom: 1vh;
    background-color: var(--gray-750);
    border-radius: 0.375rem;
    cursor: pointer;
    width: 48%;

    .thin-title {
      padding: 2vh 0 1.5vh 2vh;
      flex: 1;
      text-decoration: none;
    }

    .external {
      margin-left: 0.5rem;
      justify-content: right;
      transition: transform 0.3s ease;
      padding-bottom: 1px;
    }
  }

  .project-link:hover {
    background-color: var(--gray-700);

    a {
      color: white;
    }

    .external {
      color: var(--red-500);
      transform: translate(4px, -8px);
      /* Move right (positive X) and up (negative Y) */
    }
  }

  .shield {
    img {
      margin-right: 1vh;
      margin-bottom: 1vh;
      padding: 0;
      width: auto;
      height: 30px;
    }

  }
}

/* Resume Page */
.resume-column {
  display: flex;
  height: 100vh;
  min-height: 500px;

  object {
    flex-grow: 1;
    width: calc(100vw - 200px);
  }
}

